--- a/app/_locales/ja/messages.json
+++ b/app/_locales/ja/messages.json
@@ -1,6 +1,6 @@
 {
   "appName": {
-    "message": "ChatWork Quick Info Input",
+    "message": "Chatwork Quick Info Input",
     "description": "The name of the application"
   },
   "appShortName": {
@@ -8,7 +8,7 @@
     "description": "The short_name (maximum of 12 characters recommended) is a short version of the app's name."
   },
   "appDescription": {
-    "message": "ChatWorkの[info][/info]を素早く入力する拡張機能",
+    "message": "Chatworkの[info][/info]を素早く入力する拡張機能",
     "description": "The description of the application"
   }
 }
